# kedro-tutorial

./: README.md
iris/: .gitignore  README.md  pyproject.toml
iris/notebooks/: test.ipynb
iris/src/: requirements.txt
iris/src/iris/: __init__.py
iris/src/iris/pipelines/data_science/: nodes.py  pipeline.py
titanic/: .gitignore  README.md  pyproject.toml
titanic/conf/base/: catalog.yml  parameters.yml
titanic/docs/source/: conf.py  index.rst
titanic/notebooks/: Untitled.ipynb
titanic/src/: requirements.txt  setup.py
titanic/src/tests/: test_run.py
titanic/src/titanic/: __init__.py  hooks.py  settings.py
titanic/src/titanic/pipelines/data_engineering/: pipeline.py
titanic/src/titanic/pipelines/data_engineering/nodes/: preprocess.py
titanic/src/titanic/pipelines/data_science/: pipeline.py
titanic/src/titanic/pipelines/data_science/nodes/: modeling.py
