[tool.kedro]
package_name = "titanic"
project_name = "titanic"
project_version = "0.17.0"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/titanic -ra"""

[tool.poetry]
name = "titanic"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
kedro-viz = "^3.8.1"
kedro = "^0.17.0"
mlflow = "^1.13.1"
sklearn = "^0.0"
scikit-learn = "^0.24.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
